// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api.service tests getContentTypeHeaders 1`] = `
{
  "Accept": "application/json",
  "Content-Type": "application/json",
}
`;

exports[`api.service tests injectHeaders 1`] = `
{
  "headers": {
    "Authorization": "1",
  },
}
`;

exports[`api.service tests injectHeaders 2`] = `
{
  "headers": {
    "Authorization": "1",
  },
}
`;

exports[`api.service tests injectHeaders 3`] = `
{
  "headers": {
    "Authorization": "1",
    "Content-Type": "application/json",
  },
}
`;

exports[`api.service tests injectHeaders 4`] = `
{
  "headers": {
    "Authorization": "none",
  },
}
`;
